@@ -16,6 +16,7 @@ EXECNAME=program$(EXE)
 ABCDFILES=backtrace.ml
 OTHERFILES=backtrace2.ml raw_backtrace.ml \
            backtrace_deprecated.ml backtrace_slots.ml
+OTHERFILESNOINLINING=backtraces_and_finalizers.ml
 
 default:
 	$(MAKE) byte
@@ -63,6 +64,16 @@ native:
 	@for file in $(OTHERFILES); do \
 	  rm -f program program.exe; \
 	  $(OCAMLOPT) -g -o $(EXECNAME) $$file; \
+	  printf " ... testing '$$file' with ocamlopt:"; \
+	  F="`basename $$file .ml`"; \
+	  (OCAMLRUNPARAM=b=1 ./$(EXECNAME) $$arg || true) \
+	       >$$F.native.result 2>&1; \
+	  $(DIFF) $$F.reference $$F.native.result >/dev/null \
+	  && echo " => passed" || echo " => failed"; \
+	done;
+	@for file in $(OTHERFILESNOINLINING); do \
+	  rm -f program program.exe; \
+	  $(OCAMLOPT) -inline 0 -g -o $(EXECNAME) $$file; \
 	  printf " ... testing '$$file' with ocamlopt:"; \
 	  F="`basename $$file .ml`"; \
 	  (OCAMLRUNPARAM=b=1 ./$(EXECNAME) $$arg || true) \
